modules/gtsam/4.3.0-alpha.1/README.md
# GTSAM

## BCR Maintainer Notes

* This version of gtsam requires at least C++17. Add this to your .bazelrc:
    build --cxxopt=-std=c++17
    build --host_cxxopt=-std=c++17

### Known Issues

* Currently, python binding for gtsam is not supported on bzlmod.
* Eigen 3.4.1 is the newest version supported.

### Libraries

* `@gtsam//:gtsam` - This library is a set of variable and factor types typically used in SFM and
SLAM.
* `@gtsam//:gtsam_unstable` - This library is a set of experimental additions to gtsam that are not fully ready to be integrated into the rest of the library. This library is actively maintained, and should follow the same design procedures as gtsam.

### Build Flags

* `--@gtsam//:allow_deprecated_since_v43` - Defines `GTSAM_ALLOW_DEPRECATED_SINCE_V43`,
exposing the APIs GTSAM deprecated in 4.3. Defaults to on, matching upstream's own CMake
option. Add `common --@gtsam//:allow_deprecated_since_v43=False` to your `.bazelrc` to build
without them.

### Configuration Headers

* `gtsam/config.h`, `gtsam/dllexport.h`, `gtsam_unstable/dllexport.h` are generated by `cmake_configure_file`.
